--- a/share/src/Hardware/kinect/Makefile.gof
+++ b/share/src/Hardware/kinect/Makefile.gof
@@ -2,8 +2,7 @@ BASE   = ../../..
 NAME   = libHardware_$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
-CXXFLAGS += -I/usr/local/include/libfreenect -I/usr/include/libusb-1.0
-LIBS += -lfreenect
+FREENECT = 1
 DEPEND = Core
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
