--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -32,8 +32,8 @@ if(PCL_FOUND)
         ${PCL_SAMPLE_CONSENSUS_LIBRARY}
     )
 
-    add_executable(pcl_p_test main.cpp)
-    target_link_libraries(pcl_p_test mlr_pcl)
+    add_executable(pcl_p_test.exe main.cpp)
+    target_link_libraries(pcl_p_test.exe mlr_pcl)
 
     add_executable(viewer.exe viewer.cpp test_method.cpp generate_cylinder_on_table.cpp)
     target_link_libraries(viewer.exe ${PCL_LIBRARIES})
